Fix portfolio timeline on dark mode

--- a/themes/maik-blog/assets/scss/_portfolios.scss
+++ b/themes/maik-blog/assets/scss/_portfolios.scss
@@ -118,8 +118,6 @@
       position: absolute;
 
       transform: translate(-50%, -50%);
-      background-color: #222;
-      color: #fff;
       border-radius: 50%;
       font-weight: bold;
       min-width: 50px;
@@ -128,6 +126,14 @@
       text-align: center;
       top: 30px;
       z-index: 10;
+
+      background-color: $light-color;
+      color: $light-background;
+
+      .dark-theme & {
+        background-color: $dark-color;
+        color: $dark-background;
+      }
     }
 
     &::after {
@@ -137,11 +143,10 @@
       top: -50px;
       width: calc(50% + 50px);
       height: calc(100% + 83px);
-      background: rbga(0, 0, 255, 0.3);
       pointer-events: none;
 
-      border-bottom: 3px solid #222;
-      border-top: 3px solid #222;
+      border-bottom: 3px solid;
+      border-top: 3px solid;
     }
 
     &:nth-child(odd) {
@@ -154,7 +159,7 @@
 
       &::after {
         left: -50px;
-        border-left: 3px solid #222;
+        border-left: 3px solid;
         border-radius: 15px 0 0 15px;
       }
     }
@@ -168,7 +173,7 @@
 
       &::after {
         right: -50px;
-        border-right: 3px solid #222;
+        border-right: 3px solid;
         border-radius: 0 15px 15px 0;
       }
     }
